static/css/style.less
// -*- mode: less-css -*-

@font: "Ubuntu";
@font-mono: "Ubuntu Mono";
@font-weight-normal: 300;
@font-weight-bold: 500;
@font-size: 20px;

@color-bg-light: #fafafa;
@color-bg-dark: #efefef;
@color-text: #333;
@color-footer-text: #808080;
@color-link: #c7254e;

@border-color: #ddd;
@border: 1px solid @border-color;
@border-left: 4px solid @border-color;
@border-bar: 5px solid #333;

@top-elements-padding: 2em 0;

@list-separator-spacing: 0.5em;


body {
    background-color: @color-bg-light;
    color: @color-text;
    font-family: @font;
    font-weight: @font-weight-normal;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
    margin-top: 1em;
    margin-bottom: 0.7em;
    font-weight: @font-weight-normal;
}

h1,
.h1,
.tipue_search_content_title {
    font-size: 25px;
    margin-top: 0;
}

h2,
.h2 {
    font-size: 24px;
}

code,
kbd,
pre,
samp {
    font-family: @font-mono;
    border: @border;
}

tt {
    font-family: @font-mono;
}

a {
    transition: color 0.2s ease-in-out;

    &,
    &:hover,
    &:visited,
    &:active,
    &:focus {
        color: @color-text;
        text-decoration: none;
    }

    &:hover {
        color: @color-link;
    }
}

header {
    background-color: @color-bg-dark;
    border-bottom: @border;
    border-top: @border-bar;
    padding: @top-elements-padding;

    h1 {
        font-size: 30px;
        margin-top: 0;
        margin-bottom: .3em;
    }

    h2 {
        font-size: 20px;
        font-style: italic;
        margin-bottom: 1.2em;
        margin-top: 0;
        margin-left: 1em;
        color: lighten(@color-text, 20%);
    }

    nav {
        text-align: center;
        font-size: 15px;

        ul {
            margin-bottom: 0;

            li {
                &:first-child {
                    padding-left: 0;
                }

                &:last-child {
                    padding-right: 0;
                }
            }
        }
    }
}

footer {
    border-top: @border;
    border-bottom: @border-bar;
    padding: @top-elements-padding;
    text-align: center;
    font-size: 12px;
    background-color: @color-bg-dark;
    color: @color-footer-text;

    .footer-links {
        font-weight: @font-weight-bold;
    }
}

main {
    padding: @top-elements-padding;
}

article {

    .post-title {
        margin-top: 0;
    }

    &.draft .post-title::after {
        color: @color-link;
        content: "[DRAFT]";
    }


    .post-details {
        font-size: 13px;

        .post-date a {
            &:hover,
            &:visited,
            &:active {
                color: lighten(@color-text, 40%);
            }
        }
    }

    &.post-summary {
        border-bottom: @border;
        padding: 1em 0;

        &:first-child {
            padding-top: 0;
        }

        &:last-child {
            border-bottom: none;
        }

        nav {
            margin-top: 1em;

            .nav-links {
                font-size: 13px;
                display: inline-block;
                position: relative;
                width: 100%;

                a {
                    float: right;
                    margin-right: 1em;
                }
            }
        }
    }

    .post-content {
        margin-top: 1.5em;

        .headerlink {
            margin-left: 0.1em;
            opacity: 0;
        }

        h2:hover .headerlink {
            opacity: 1;
            transition: opacity 0.2s ease-in-out;

            &:hover {
                border-bottom: 0;
            }
        }

        img {
            display: block;
            height: auto;
            max-width: 100%;
            width: 100% \9;
        }

        pre {
            padding: 0.5em;
            border-left: @border-left;
        }

        p,
        pre {
            margin-bottom: 1em;
        }
    }
}

.post-content,
.content {
    a {
        color: @color-link;
        &:hover {
            border-bottom: 1px dotted;
        }
    }
}

.container {
    max-width: 960px;
}

.content-hint,
#tipue_search_results_count {
    font-size: 14px;
    margin-bottom: 0;
}

.comments {
    margin-top: 2em;
    padding-top: 2em;
    border-top: @border;
}

.pager li a {
    transition: none;
    border-radius: 4px;
}

.list-separated > li {
    padding: 0;
    margin-right: @list-separator-spacing;

    &::after {
        margin-left: @list-separator-spacing;
    }

    &:last-child::after {
        content: none;
    }
}

.list-separated-pipe > li::after {
    content: "|";
}

.list-separated-dot > li::after {
    content: "\b7";
}

.list-inline {
    margin-left: 0;
}

.list-index {
    @margin : 1em;
    margin-left: @margin;

    li,
    dt {
        margin-top: @margin;
    }

    dd {
        margin-top: @margin;
        margin-left: @margin;
    }
}

.tipue_search_content_title {
    margin-top: 0.5em;
}

.tipue_search_content_url {
    margin-left: 1em;

    a {
        color: lighten(@color-text, 40%);
    }
}

.tipue_search_content_text {
    border-bottom: @border;
    padding: 1em 0;
}

#tipue_search_warning {
    margin: 0.3em 0;
}

#tipue_search_input {
    width: 10em;
    height: 25px;
    border: none;
    margin-left: 0.5em;
    background: transparent;
    color: lighten(@color-text, 20%);

    &:focus {
        outline: none;
    }
}


@media (min-width: 960px) {

    header {

        h1 {
            font-size: 52px;
        }

        h2 {
            font-size: 30px;
        }

        nav {
            text-align: left;
            font-size: 18px;
        }
    }

    footer {

        .footer-links {
            font-size: 14px;
        }
    }

    .page {
        .content {
            font-size: @font-size;
        }
    }

    article {
        font-size: @font-size;

        .post-details {
            font-size: @font-size * 4/5;
        }

        .post-content {

            pre {
                font-size: @font-size * 4/5;
            }
        }

        &.post-summary {

            nav {

                .nav-links {
                    font-size: @font-size - 4px;
                }
            }
        }
    }

    .content-hint,
    #tipue_search_results_count {
        font-size: 18px;
        margin-bottom: 0.7em;
    }

    .h1,
    h1,
    .tipue_search_content_title {
        font-size: 36px;
    }

    .list-index {

        li,
        dt,
        dd {
            font-size: @font-size;
        }
    }

    .tipue_search_content_url {
        font-size: 16px;
    }

    .tipue_search_content_text,
    #tipue_search_warning {
        font-size: 20px;
    }
}

